[package]
name = "whitelistme"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-client-ip = "0.6.1"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["full"] }
anyhow = "1.0.71"
sha1 = "0.10.6"
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = "0.12.9"