[package]
name = "whitelistme"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-client-ip = "0.6.1"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0.71"
sha1 = "0.10.6"
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = "0.12.9"
chrono = "0.4.38"
urlencoding = "2.1.3"
rand = "0.8.5"
ring = "0.17.8"
base64 = "0.22.1"
aliyun-openapi-core-rust-sdk = "1.1.0"